packages/typ/tests/fixtures/diagnostics/0166_adt_tuple_constructor_mismatch_04.ml.expected
File "0166_adt_tuple_constructor_mismatch_04.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0166_adt_tuple_constructor_mismatch_04 is not a valid module name.

File "0166_adt_tuple_constructor_mismatch_04.ml", line 2, characters 32-36:
2 | let _ : rec_delta = Pair_delta (true, 3)
                                    ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
